--- a/Assessment1.html
+++ b/Assessment1.html
@@ -9,25 +9,142 @@
   <body>
     <div class="grid-container">
       <div class="item1">
-        <h1>Alejandro Montalvo Patiño</h1>
-        <h2>Business & Technology Engineer</h2>
+        <div class="grid-container-head">
+          <div class="item5">
+            <img class="picture" src="alex.jpeg" >
+          </div>
+          <div class="item6">
+            <h1>Alejandro Montalvo Patiño</h1>
+            <h2>Business & Technology Engineer</h2>
+          </div>
+        </div>
       </div>
       <div class="item2">
         <div class="work">
+          <h3 class="container">
+            <span>Marketing Manager, <i>Admission Hub</i></span>
+            <span>Jan. 2019 – Present</span>
+          </h3>
+          <ul type="square">
+            <li>Design and implement marketing campaigns to attract new clients to the company via social media.</li>
+            <li>Create company formats and process in Spanish to improve the well understanding for Latin-American clients.</li>
+            <li>Support administrative activities to improve organization for the sales team.</li>
+            <li>Manage and guide new team department team members.</li>
+          </ul>
+
+          <h3>Customer Service & Promotion Intern, <i>ISX Canada</i> Nov. 2019 – Feb. 2020</h3>
+          <ul type="square">
+            <li>Promote ISX traveling services to ESL students.</li>
+            <li>Engage and provide support to customers, including managing cash and electronic transactions.</li>
+            <li>Leverage ISX's CRM to capture customer information and book their trips.</li>
+          </ul>
+
+          <h3>Marketing Intern, <i>Admission Hub</i> Mar. 2019 – Dec. 2020</h3>
+          <ul type="square">
+            <li>Design and implement marketing campaigns to attract new clients to the company via social media.</li>
+            <li>Create company formats and process in Spanish to improve the well understanding for Latin-American clients.</li>
+            <li>Support administrative activities to improve organization for the sales team.</li>
+          </ul>
+
+          <h3>Sales Intern, <i>IBM</i> Jul. 2017 – Jun. 2018</h3>
+          <ul type="square">
+            <li>Sold accounts under $30,000 USD, which related to technology as a service.</li>
+            <li>Monitored performance and levels of small accounts.</li>
+            <li>Generated business reports and metrics to evaluate business processes and streamline workflow.</li>
+            <li>Developed and implemented Tech OI program to generate new revenue.</li>
+            <li>Designed and implemented standard metrics to create automated reports.</li>
+          </ul>
+
 
         </div>
         <div class="education">
+          <h3>Diploma in Mobile Application Development</h3>
+          <h4>Cambrian at Hanson College, Sep. 2020 – Present</h4>
 
+          <h3>Diploma in Business Administration with CO-OP</h3>
+          <h4>Toronto School Of Management, Jan. 2019 – May. 2020</h4>
+
+          <h3>Bachelor of Applied Science, Business and Information Technology Engineering</h3>
+          <h4>Instituto Tecnológico de Estudios Superiores de Monterrey (Tec de Monterrey), Aug. 2013 – May. 2018</h4>
+          <ul type="square">
+            <li>Graduated with a cumulative grade of 86%.</li>
+            <li>Maintained a five year academic and athletic scholarship.</li>
+            <li>Relevant courses: Projects Engineering, Business Process Management, Information Technology Strategic Planning, Information Technology Service Management, Information Systems Development and Databases, Programming Fundamentals, Computer Networks.</li>
+          </ul>
         </div>
         <div class="extra">
+          <h3>Orientation Volunteer, <i>Toronto School of Management</i>	Jan. 2019 – Present</h3>
+          <ul type="square">
+            <li>Help the administrative staff to coordinate and execute activities in the orientation day.</li>
+            <li>Resolve doubts and issues for new students on their first day.</li>
+            <li>Contribute to well performance and organization of main activities during important events for the school.</li>
+          </ul>
+
+          <h3>Varsity Basketball Team Point Guard, <i>Tec de Monterrey </i>	Aug. 2013 – May. 2018</h3>
+          <ul type="square">
+            <li>Made key decisions about play strategies during the games.</li>
+            <li>Led team offences and directed the pace of play.</li>
+            <li>Won the National Championship of the second division of universities in 2017.</li>
+          </ul>
+
+          <h3>Student Group President, <i>Tec de Monterrey </i>	Aug. 2016 – May. 2018</h3>
+          <ul type="square">
+            <li>Led “Pride CSF” dedicated students group to promote the sports activities and teams within the university.</li>
+            <li>Implemented a Facebook page to inform and encourage students to participate.</li>
+            <li>Increased the number of spectators in all sports games.</li>
+          </ul>
+
+          <h3>Mathematics and Physics Tutor, <i>Tec de Monterrey </i>	Jun. 2015 – May. 2017</h3>
+          <ul type="square">
+            <li>Taught mathematics and physics to students between the ages of 9 - 20 years.</li>
+            <li>Helped students improve knowledge of these subjects, which was reflected in their grades.</li>
+          </ul>
 
         </div>
       </div>
       <div class="item3">
+        <h3>Software and Programming Languages</h3>
+        <ul type="square">
+          <li>Microsoft Office suite.</li>
+          <li>Programing C++.</li>
+          <li>HTML, CSS, JavaScript.</li>
+          <li>SQL Databases.</li>
+          <li>Excel Macros.</li>
+          <li>Cisco Networking.</li>
+        </ul>
+
+        <h3>Additional Languages </h3>
+        <ul type="square">
+          <li>Fluent in Spanish.</li>
+        </ul>
+
+        <h3>Hard Skills</h3>
+        <ul type="square">
+          <li>Accounting & Finance.</li>
+          <li>Business & Data Analysis.</li>
+          <li>Computer Technology.</li>
+          <li>Project Management.</li>
+          <li>Excel Macros.</li>
+          <li>Teaching.</li>
+        </ul>
+
+        <h3>Soft Skills</h3>
+        <ul type="square">
+          <li>Adaptability & Flexibility.</li>
+          <li>Attention to Details.</li>
+          <li>Collaboration & Teamwork.</li>
+          <li>Independence.</li>
+          <li>Interpersonal Skills.</li>
+          <li>Leadership & Management.</li>
+          <li>Problem Solving & Analytic Thinking.</li>
+          <li>Professionalism.</li>
+          <li>Time Management.</li>
+        </ul>
 
       </div>
       <div class="item4">
-        footer
+        <h3>alejandro.montalvo01@gmail.com  |  647 891 6446  |  321 Augusta Ave, Toronto, ON</h3>
+        <h4>YOU GUYS IS CHUMPS .I.</h4>
       </div>
     </div>
   </body>
