--- a/Assessment1.html
+++ b/Assessment1.html
@@ -11,7 +11,7 @@
       <div class="item1">
         <div class="grid-container-head">
           <div class="item5">
-            <img class="picture" src="alex.jpeg" >
+            <img class="picture" src="alex.png" >
           </div>
           <div class="item6">
             <h1>Alejandro Montalvo Patiño</h1>
@@ -21,6 +21,7 @@
       </div>
       <div class="item2">
         <div class="work">
+          <h2 class="texth2">Work Experience</h2>
           <h3 class="container">
             <span>Marketing Manager, <i>Admission Hub</i></span>
             <span>Jan. 2019 – Present</span>
@@ -32,21 +33,30 @@
             <li>Manage and guide new team department team members.</li>
           </ul>
 
-          <h3>Customer Service & Promotion Intern, <i>ISX Canada</i> Nov. 2019 – Feb. 2020</h3>
+          <h3 class="container">
+            <span>Customer Service & Promotion Intern, <i>ISX Canada</i></span>
+            <span>Nov. 2019 – Feb. 2020</span>
+          </h3>
           <ul type="square">
             <li>Promote ISX traveling services to ESL students.</li>
             <li>Engage and provide support to customers, including managing cash and electronic transactions.</li>
             <li>Leverage ISX's CRM to capture customer information and book their trips.</li>
           </ul>
 
-          <h3>Marketing Intern, <i>Admission Hub</i> Mar. 2019 – Dec. 2020</h3>
+          <h3 class="container">
+            <span>Marketing Intern, <i>Admission Hub</i></span>
+            <span>Mar. 2019 – Dec. 2020</span>
+          </h3>
           <ul type="square">
             <li>Design and implement marketing campaigns to attract new clients to the company via social media.</li>
             <li>Create company formats and process in Spanish to improve the well understanding for Latin-American clients.</li>
             <li>Support administrative activities to improve organization for the sales team.</li>
           </ul>
 
-          <h3>Sales Intern, <i>IBM</i> Jul. 2017 – Jun. 2018</h3>
+          <h3 class="container">
+            <span>Sales Intern, <i>IBM</i></span>
+            <span>Jul. 2017 – Jun. 2018</span>
+          </h3>
           <ul type="square">
             <li>Sold accounts under $30,000 USD, which related to technology as a service.</li>
             <li>Monitored performance and levels of small accounts.</li>
@@ -54,47 +64,71 @@
             <li>Developed and implemented Tech OI program to generate new revenue.</li>
             <li>Designed and implemented standard metrics to create automated reports.</li>
           </ul>
-
-
         </div>
+
         <div class="education">
-          <h3>Diploma in Mobile Application Development</h3>
-          <h4>Cambrian at Hanson College, Sep. 2020 – Present</h4>
+          <h2 class="texth2">Education</h2>
+          <h3 class="container">
+            <span>Diploma in Mobile Application Development</span>
+            <span>Sep. 2020 – Present</span>
+          </h3>
+          <h4><i>Cambrian at Hanson College</i></h4>
 
-          <h3>Diploma in Business Administration with CO-OP</h3>
-          <h4>Toronto School Of Management, Jan. 2019 – May. 2020</h4>
+          <h3 class="container">
+            <span>Diploma in Business Administration with CO-OP</span>
+            <span>Jan. 2019 – May. 2020</span>
+          </h3>
+          <h4><i>Toronto School Of Management</i></h4>
 
-          <h3>Bachelor of Applied Science, Business and Information Technology Engineering</h3>
-          <h4>Instituto Tecnológico de Estudios Superiores de Monterrey (Tec de Monterrey), Aug. 2013 – May. 2018</h4>
+          <h3 class="container">
+            <span>BASc, Business and Information Technology Engineering</span>
+            <span>Aug. 2013 – May. 2018</span>
+          </h3>
+          <h4><i>Instituto Tecnológico de Estudios Superiores de Monterrey (Tec de Monterrey)</i></h4>
           <ul type="square">
             <li>Graduated with a cumulative grade of 86%.</li>
             <li>Maintained a five year academic and athletic scholarship.</li>
             <li>Relevant courses: Projects Engineering, Business Process Management, Information Technology Strategic Planning, Information Technology Service Management, Information Systems Development and Databases, Programming Fundamentals, Computer Networks.</li>
           </ul>
         </div>
+
         <div class="extra">
-          <h3>Orientation Volunteer, <i>Toronto School of Management</i>	Jan. 2019 – Present</h3>
+          <h2 class="texth2">Extracurricular activities</h2>
+
+          <h3 class="container">
+            <span>Orientation Volunteer, <i>Toronto School of Management</i></span>
+            <span>Jan. 2019 – Present</span>
+          </h3>
           <ul type="square">
             <li>Help the administrative staff to coordinate and execute activities in the orientation day.</li>
             <li>Resolve doubts and issues for new students on their first day.</li>
             <li>Contribute to well performance and organization of main activities during important events for the school.</li>
           </ul>
 
-          <h3>Varsity Basketball Team Point Guard, <i>Tec de Monterrey </i>	Aug. 2013 – May. 2018</h3>
+          <h3 class="container">
+            <span>Varsity Basketball Team Point Guard, <i>Tec de Monterrey</i>	</span>
+            <span>Aug. 2013 – May. 2018</span>
+          </h3>
           <ul type="square">
             <li>Made key decisions about play strategies during the games.</li>
             <li>Led team offences and directed the pace of play.</li>
             <li>Won the National Championship of the second division of universities in 2017.</li>
           </ul>
 
-          <h3>Student Group President, <i>Tec de Monterrey </i>	Aug. 2016 – May. 2018</h3>
+          <h3 class="container">
+            <span>Student Group President, <i>Tec de Monterrey </i>	</span>
+            <span>Aug. 2016 – May. 2018</span>
+          </h3>
           <ul type="square">
             <li>Led “Pride CSF” dedicated students group to promote the sports activities and teams within the university.</li>
             <li>Implemented a Facebook page to inform and encourage students to participate.</li>
             <li>Increased the number of spectators in all sports games.</li>
           </ul>
 
-          <h3>Mathematics and Physics Tutor, <i>Tec de Monterrey </i>	Jun. 2015 – May. 2017</h3>
+          <h3 class="container">
+            <span>Mathematics and Physics Tutor, <i>Tec de Monterrey </i></span>
+            <span>Jun. 2015 – May. 2017</span>
+          </h3>
           <ul type="square">
             <li>Taught mathematics and physics to students between the ages of 9 - 20 years.</li>
             <li>Helped students improve knowledge of these subjects, which was reflected in their grades.</li>
@@ -143,8 +177,7 @@
 
       </div>
       <div class="item4">
-        <h3>alejandro.montalvo01@gmail.com  |  647 891 6446  |  321 Augusta Ave, Toronto, ON</h3>
-        <h4>YOU GUYS IS CHUMPS .I.</h4>
+        <h3 class="texth3">alejandro.montalvo01@gmail.com  |  647 891 6446  |  321 Augusta Ave, Toronto, ON</h3>
       </div>
     </div>
   </body>
