improve organization and names, add sections links and work samples

--- a/Assessment1.html
+++ b/Assessment1.html
@@ -7,22 +7,22 @@
 
   </head>
   <body>
-    <div class="grid-container">
-      <div class="item1">
-        <div class="grid-container-head">
-          <div class="item5">
+    <div class="grid-container-master">
+      <div class="header">
+        <div class="grid-container-header">
+          <div class="profile-picture">
             <img class="picture" src="alex.png" >
           </div>
-          <div class="item6">
+          <div class="name-title">
             <h1>Alejandro Montalvo Patiño</h1>
             <h2>Business & Technology Engineer</h2>
           </div>
         </div>
       </div>
-      <div class="item2">
+      <div class="main-body">
         <div class="work">
-          <h2 class="texth2">Work Experience</h2>
-          <h3 class="container">
+          <h2 class="section-title">Work Experience</h2>
+          <h3 class="subsection-title">
             <span>Marketing Manager, <i>Admission Hub</i></span>
             <span>Jan. 2019 – Present</span>
           </h3>
@@ -33,7 +33,7 @@
             <li>Manage and guide new team department team members.</li>
           </ul>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Customer Service & Promotion Intern, <i>ISX Canada</i></span>
             <span>Nov. 2019 – Feb. 2020</span>
           </h3>
@@ -43,7 +43,7 @@
             <li>Leverage ISX's CRM to capture customer information and book their trips.</li>
           </ul>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Marketing Intern, <i>Admission Hub</i></span>
             <span>Mar. 2019 – Dec. 2020</span>
           </h3>
@@ -53,7 +53,7 @@
             <li>Support administrative activities to improve organization for the sales team.</li>
           </ul>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Sales Intern, <i>IBM</i></span>
             <span>Jul. 2017 – Jun. 2018</span>
           </h3>
@@ -67,20 +67,20 @@
         </div>
 
         <div class="education">
-          <h2 class="texth2">Education</h2>
-          <h3 class="container">
+          <h2 class="section-title">Education</h2>
+          <h3 class="subsection-title">
             <span>Diploma in Mobile Application Development</span>
             <span>Sep. 2020 – Present</span>
           </h3>
           <h4><i>Cambrian at Hanson College</i></h4>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Diploma in Business Administration with CO-OP</span>
             <span>Jan. 2019 – May. 2020</span>
           </h3>
           <h4><i>Toronto School Of Management</i></h4>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>BASc, Business and Information Technology Engineering</span>
             <span>Aug. 2013 – May. 2018</span>
           </h3>
@@ -93,9 +93,9 @@
         </div>
 
         <div class="extra">
-          <h2 class="texth2">Extracurricular activities</h2>
+          <h2 class="section-title">Extracurricular activities</h2>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Orientation Volunteer, <i>Toronto School of Management</i></span>
             <span>Jan. 2019 – Present</span>
           </h3>
@@ -105,7 +105,7 @@
             <li>Contribute to well performance and organization of main activities during important events for the school.</li>
           </ul>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Varsity Basketball Team Point Guard, <i>Tec de Monterrey</i>	</span>
             <span>Aug. 2013 – May. 2018</span>
           </h3>
@@ -115,7 +115,7 @@
             <li>Won the National Championship of the second division of universities in 2017.</li>
           </ul>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Student Group President, <i>Tec de Monterrey </i>	</span>
             <span>Aug. 2016 – May. 2018</span>
           </h3>
@@ -125,7 +125,7 @@
             <li>Increased the number of spectators in all sports games.</li>
           </ul>
 
-          <h3 class="container">
+          <h3 class="subsection-title">
             <span>Mathematics and Physics Tutor, <i>Tec de Monterrey </i></span>
             <span>Jun. 2015 – May. 2017</span>
           </h3>
@@ -136,7 +136,7 @@
 
         </div>
       </div>
-      <div class="item3">
+      <div class="sidebar">
         <h3>Software and Programming Languages</h3>
         <ul type="square">
           <li>Microsoft Office suite.</li>
@@ -175,9 +175,23 @@
           <li>Time Management.</li>
         </ul>
 
+        <h3>Work Samples</h3>
+        <ul type="square">
+          <li>Facebook Ad</li>
+          <img class="picture2" src="p1.png" >
+          <li>Seminar Promotional</li>
+          <img class="picture2" src="p2.png" >
+        </ul>
+
+        <h3>Personal Links</h3>
+        <ul type="square">
+          <li><a href="https://github.com/Alexmp10/">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/alejandro-montalvo-pati%C3%B1o-b453ab166/">LinkedIn</a></li>
+        </ul>
+
       </div>
-      <div class="item4">
-        <h3 class="texth3">alejandro.montalvo01@gmail.com  |  647 891 6446  |  321 Augusta Ave, Toronto, ON</h3>
+      <div class="footer">
+        <h3 class="footer-text">alejandro.montalvo01@gmail.com  |  647 891 6446  |  321 Augusta Ave, Toronto, ON</h3>
       </div>
     </div>
   </body>
